[metadata]
name = Text-Menus-JJohnson
version = 0.0.1
author = Jason Johnson
author_email = jason.a.johnson.1990@gmail.com
description = Builds and displays text menus for console applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xD34THROW/menus
project_urls =
    Bug Tracker = https://github.com/xD34THROW/menus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AGPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
